fix(sidebar.css): remove unwanted overflow prop

--- a/app/assets/stylesheets/customizations/sidebar.css
+++ b/app/assets/stylesheets/customizations/sidebar.css
@@ -2,7 +2,6 @@
   position: fixed;
   padding-left: 5px;
   max-height: calc(100vh - 5rem);
-  overflow-y: hidden;
   overflow-x: auto;
   display: block;
   white-space: nowrap;
